// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX KpBSM"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bHpkBe"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bpMfQW"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX ZlIPN"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb gVaOZN"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX buAkqX"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb cbgfKv"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje dnuoWJ"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX neAoH"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb iEeTlS"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gKzYfl"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb iWpZOS"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX fCDDHH"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fpGkCX"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX efItOY"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX kTCkfQ"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX eXmMTl"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jyqOrr"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX irOcBL"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fjNxpv"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX cMAdNW"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX fncrGg"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX PLUpB"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX iikIeh"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX fCDDHH"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fpGkCX"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX efItOY"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX kTCkfQ"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX eXmMTl"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX jyqOrr"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX irOcBL"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX fjNxpv"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX cMAdNW"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX fncrGg"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX PLUpB"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX iikIeh"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX eXmMTl"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-ifAKCX eXmMTl"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa ghJYji sc-bZQynM flUvJk"
  >
    News
  </p>
</button>
`;
